[gd_scene load_steps=2 format=3 uid="uid://bpe5p21mbrpgm"]

[ext_resource type="Script" path="res://ui/menus/gameplay/pause_menu/pause_menu.gd" id="1_v3ano"]

[node name="PauseMenu" type="CanvasLayer" groups=["pause_menu"]]
process_mode = 3
layer = 10
visible = false
script = ExtResource("1_v3ano")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CONTROLS"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT TO MENU"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
